--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@playwright/test": "^1.55.1",
     "@types/node": "^24.5.2",
     "dotenv": "^17.2.3",
-    "dotnet": "^1.1.4"
+    "dotnet": "^1.1.4",
+    "pg": "^8.16.3"
   }
 }
