--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@faker-js/faker": "^10.0.0",
     "@playwright/test": "^1.55.1",
     "@types/node": "^24.5.2",
+    "artillery": "^2.0.26",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "dotnet": "^1.1.4",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "ulid": "^3.0.1"
   }
 }
